# airflow

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
articles/: article_1.md
dags/: pipeline_dag.py
dbt_project/: profiles.yml
dbt_project/models/: stg_users.sql
scripts/: extract.py  transform.py
