[project]
name = "airflow-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.4",
    "apache-airflow-providers-google>=19.1.0",
    "dbt-bigquery>=1.10.3",
    "google-cloud-bigquery>=3.38.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-gbq>=0.31.1",
    "requests>=2.32.5",
]
